
        * Bug fix Version 0.8.2 released
        ================================

        Avoid division by zero error in GModelSpectralPlaw2 (#1141)
        Add __len__ and copy() methods to GEvents Python interface
        Increase Npred spectral integration precision to 1e-8 (#1142)
        Use GCaldb for COMPTEL response handling
        Add Pass 7 response files for Fermi/LAT


2014-02-05  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
        
        * Bug fix Version 0.8.1 released
        ================================
        
        Added missing hyphens in pfiles synchronisation section (#1091)
        Add configuration test script (#1091)
        GModelSky, GCTAModelBackground and GCTAModelRadialAcceptance write id attribute into XML file (#1092)
        Add GChatter typedef to Python interface
        GAMMALIB_CALDB takes precedence over CALDB environment variable (#1094)
        Added vo module and GVOClient class to Python interface
        Track results of Python unit tests (#1119)
        Clean-up calibration database interface (#1102)
        Correct 2D PSF Monte-Carlo simulations (#1128)
        Correct deadtime computation for CTA non point source response (#1133)


2014-01-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.8.0 released
        ========================

        Major review of public interfaces of all classes
        Reorganize sky models
        Introduce GContainer interface class
        Add Virtual Observatory support
        Introduce GUrl classes for transparent URL handling
        Make use of GUrl class in XML I/O
        Optimize computations
        Introduce gammalib namespace for constants and functions
        GModelSpatialDiffuseCube reads ENERGIES extension
        Add sky region handling
        Add on/off analysis support for CTA
        Add xspec interface support
        Rework registry classes to remove memory leaks on termination