@@ -47,6 +47,11 @@ A division by zero error occured in GModelSpectralPlaw2::eval_gradients
 in case that the integral was zero. The code has been changed to avoid
 this situation.
 
+The map cube in GModelSpatialDiffuseCube is now only loaded from the file
+when needed. This allows manipulating GModelSpatialDiffuseCube objects
+that describe huge map cubes without need for loading the map cubes into
+memory. This property is useful for Fermi/LAT analysis.
+
 
 9. Numerics module
 ------------------
